# claude-gui

./: .gitignore  README.md  changelog.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-mac-intel.yml  build.yml
docs/: packaging-guide.md
scripts/: apply-packaging-config.mjs  prepare-resources-win.ps1  prepare-resources.sh
src/: App.css  App.tsx  i18n.ts  packaging.d.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  launcher.rs  lib.rs  main.rs  pty.rs
src/pages/: Chat.tsx  Setup.tsx
