[package]
name = "claude-launcher"
version = "0.2.4"
description = "A one-click Claude Code launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
portable-pty = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
